Fixes Edit button alignment issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -135,6 +135,12 @@ td {
   padding: 1rem 1rem 1rem 1.2rem;
 }
 
+tfoot {
+  background-color: hsla(127, 50%, 50%, 1);
+  padding: 0.8rem 0.8rem 0.8rem 1.2rem;
+  height: 2rem;
+}
+
 .list-buttons {
   display: flex;
   justify-content: center;
@@ -169,6 +175,9 @@ td {
   border: 1px solid hsla(127, 0%, 70%, 1);
   border-radius: 5px;
   width: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* height: 2rem; */
 }
 
@@ -216,6 +225,11 @@ form.new-goal {
   border-radius: 0px 0px 10px 10px;
 }
 
+.currency {
+  display: flex;
+  align-items: center;
+}
+
 .input-container {
   display: flex;
   justify-content: space-between;
@@ -230,6 +244,10 @@ input {
   padding-left: 0.3rem;
   font-size: 1rem;
 }
+
+/* input[type='number'] {
+  direction: rtl;
+} */
 
 .submit {
   font-size: 1.2rem;
